# CPP_HelperLib

./: CMakeLists.txt  CMakePresets.json
Scratch/: ScreenDrawerExample.cpp
examples/: KeyboardListenerExample.cpp
examples/ScreenDrawer/: ScreenDrawerExample.cpp  ScreenDrawerExampleSimple.cpp  ScreenDrawerTransparentToggle.cpp
include/: KeyboardListner.hpp  ScreenDrawer.hpp
python/KeyboardListener/: KLPythonHelper.cpp  KLTest.py
src/: KeyboardListener.cpp
src/KeyboardListener/: KeyboardListener.cpp
src/ScreenDrawer/: ScreenDrawer.cpp
